refactor: rename Announcement accessors to getter convention